--- a/project.json
+++ b/project.json
@@ -2,7 +2,8 @@
   "version": "1.0.0-*",
   "buildOptions": {
     "debugType": "portable",
-    "emitEntryPoint": true
+    "emitEntryPoint": true, 
+    "optimize": true
   },
   "dependencies": {
     "OpenTK.NETCore" : "1.1.2364.6424"
