--- a/OpenEQ.csproj
+++ b/OpenEQ.csproj
@@ -133,15 +133,23 @@
     <Compile Include="GUI\Textbox.cs" />
     <Compile Include="GUI\Window.cs" />
     <Compile Include="MainProgram.cs" />
+    <Compile Include="Network\AsyncUDPConnection.cs" />
+    <Compile Include="Network\EQStream.cs" />
+    <Compile Include="Network\LoginStream.cs" />
+    <Compile Include="Network\Opcodes.cs" />
+    <Compile Include="Network\Packet.cs" />
+    <Compile Include="Network\SessionPackets.cs" />
     <Compile Include="OEQCharReader.cs" />
     <Compile Include="OEQZoneReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
