--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MoonSharp" version="2.0.0.0" targetFramework="net452" />
   <package id="OpenTK" version="2.0.0" targetFramework="net452" />
+  <package id="Pfim" version="0.3.1" targetFramework="net452" />
   <package id="System.Numerics.Vectors" version="4.1.1" targetFramework="net452" />
   <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net452" />
 </packages>
