--- a/OpenEQ.csproj
+++ b/OpenEQ.csproj
@@ -86,6 +86,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="LibRocketNet">
       <HintPath>..\LibRocket.Net\x64\Debug\LibRocketNet.dll</HintPath>
     </Reference>
@@ -105,8 +109,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Numerics.Vectors, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\System.Numerics.Vectors.4.1.1\lib\portable-net45+win8+wp8+wpa81\System.Numerics.Vectors.dll</HintPath>
+    <Reference Include="System.Numerics.Vectors, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.3.0-preview1-24530-04\lib\portable-net45+win8+wp8+wpa81\System.Numerics.Vectors.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -128,8 +132,11 @@
     <Compile Include="Engine\Shader.cs" />
     <Compile Include="Engine\Texture.cs" />
     <Compile Include="Engine\Time.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="GUI\CoreGUI.cs" />
+    <Compile Include="GUI\HtmlLoader.cs" />
     <Compile Include="GUI\MoonRocket\CoreMoonRocket.cs" />
+    <Compile Include="GUI\MoonRocket\EventGlue.cs" />
     <Compile Include="GUI\MoonRocket\OEQEventListenerInstancer.cs" />
     <Compile Include="GUI\OEQRenderInterface.cs" />
     <Compile Include="GUI\OEQSystemInterface.cs" />
