--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="MoonSharp" version="2.0.0.0" targetFramework="net452" />
   <package id="OpenTK" version="2.0.0" targetFramework="net452" />
   <package id="Pfim" version="0.3.1" targetFramework="net452" />
-  <package id="System.Numerics.Vectors" version="4.1.1" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net452" />
+  <package id="System.Numerics.Vectors" version="4.3.0-preview1-24530-04" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices" version="4.3.0-preview1-24530-04" targetFramework="net452" />
 </packages>
