Upgraded to Xenko 1.9

--- a/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
+++ b/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
@@ -113,6 +113,8 @@
     <Compile Include="LoginScript.cs" />
     <Compile Include="OEQZoneReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Time.cs" />
+    <Compile Include="UIScript.cs" />
     <Compile Include="ZoneLoader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
