Included network code properly. Added login implementation.

--- a/OpenEQ/OpenEQ.Windows/OpenEQ.Windows.csproj
+++ b/OpenEQ/OpenEQ.Windows/OpenEQ.Windows.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6A62CA5D-057A-438A-B24D-C10D99D90062}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OpenEQ</RootNamespace>
     <AssemblyName>OpenEQ</AssemblyName>
@@ -94,6 +94,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Condition="'$(SiliconStudioRuntime)' == ''" Include="System" />
