--- a/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
+++ b/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="UIScript.cs" />
+    <Compile Include="WorldScript.cs" />
     <Compile Include="ZoneLoader.cs" />
   </ItemGroup>
   <ItemGroup>
