--- a/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
+++ b/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
@@ -129,6 +129,10 @@
     <Compile Include="ZoneLoader.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="DotNetZip, Version=1.10.1.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetZip.1.10.1\lib\net20\DotNetZip.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.IO.Compression" />
   </ItemGroup>
