--- a/OpenEQ/OpenEQ.Game/packages.config
+++ b/OpenEQ/OpenEQ.Game/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="portable46-net451+win81+wpa81" requireReinstallation="true" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net461" />
 </packages>
