--- a/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
+++ b/OpenEQ/OpenEQ.Game/OpenEQ.Game.csproj
@@ -110,6 +110,7 @@
     <Compile Include="DESCrypto.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FPSCounter.cs" />
+    <Compile Include="ListDeconstructors.cs" />
     <Compile Include="LoginScript.cs" />
     <Compile Include="Network\AsyncUDPConnection.cs" />
     <Compile Include="Network\EQStream.cs" />
@@ -135,6 +136,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.IO.Compression" />
+    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <Import Condition="'$(SiliconStudioRuntime)' == ''" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SiliconStudioPackageProps)" Condition="Exists('$(SiliconStudioPackageProps)')" />
